--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,7 @@
 # .github/workflows/ci-cd.yml
 jobs:
   pypi-publish:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     name: Upload release to PyPI
     runs-on: ubuntu-latest
     environment:
