--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   pypi-publish:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    if: startsWith(github.ref, 'refs/tags')
     name: Upload release to PyPI
     runs-on: ubuntu-latest
     environment:
@@ -15,9 +15,12 @@ jobs:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
     - name: Checkout
+      if: startsWith(github.ref, 'refs/tags')
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
     - run: python3 -m pip install --upgrade build && python3 -m build
+      if: startsWith(github.ref, 'refs/tags')
     - name: Publish package distributions to PyPI
+      if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
