--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,11 +1,10 @@
 # .github/workflows/ci-cd.yml
 on:
   push:
-    branchs:
-      - main
+    tags:
+      - v*
 jobs:
   pypi-publish:
-    if: startsWith(github.ref, 'refs/tags')
     name: Upload release to PyPI
     runs-on: ubuntu-latest
     environment:
@@ -15,12 +14,14 @@ jobs:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
     - name: Checkout
-      if: startsWith(github.ref, 'refs/tags')
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - run: python3 -m pip install --upgrade build && python3 -m build
-      if: startsWith(github.ref, 'refs/tags')
+    - uses: actions/setup-python@v4
+      with:
+        python-version: "3.9"
+    - run: python3 -m pip install --upgrade pip setuptools wheel build 
+    - run: python3 -m build
+    - run: python3 -c "print(\"Hello World\")"
     - name: Publish package distributions to PyPI
-      if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
