--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ find = {namespaces = false}
 [project]
 name = "pozo"
 description = "A visualization library based on plotly to explore well log data"
+readme ="README.md"
+description-file ="README.md"
 requires-python = ">=3.9"
-version = "0.0.8a"
+version = "0.0.8c"
 
 [project.optional-dependencies]
 dev = ["pytest"]
