--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ find = {namespaces = false}
 
 [project]
 name = "pozo"
-description = "A visualization library based on plotly to explore well log data"
+description = "Hel visualizing well log data - Herramienta para visualizar registros de pozos"
 readme = "README.md"
 requires-python = ">=3.9"
 version = "0.1.0"
+dependencies = [
+ "ood >=1.0.1a",
+ ]
 
 [project.optional-dependencies]
 dev = ["pytest"]
