--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ find = {namespaces = false}
 
 [project]
 name = "pozo"
-description = "Hel visualizing well log data - Herramienta para visualizar registros de pozos"
+description = "Help visualizing well log data - Herramienta para visualizar registros de pozos"
 readme = "README.md"
 requires-python = ">=3.9"
-version = "0.1.0"
+version = "0.2.0"
 dependencies = [
  "ood >=1.0.0",
+ "plotly >=5.18.0",
  ]
 
 [project.optional-dependencies]
