--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,11 @@ name = "pozo"
 description = "Help visualizing well log data - Herramienta para visualizar registros de pozos"
 readme = "README.md"
 requires-python = ">=3.9"
-version = "0.2.0"
+version = "0.3.0"
 dependencies = [
  "ood >=1.0.0",
  "plotly >=5.18.0",
+ "colour >= 0.1.5",
  ]
 
 [project.optional-dependencies]
