--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
  "ood >=1.0.0",
  "plotly >=5.18.0",
  "colour >= 0.1.5",
+ "pint >= 0.23",
  ]
 
 [project.optional-dependencies]
