--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,13 @@ name = "pozo"
 description = "Help visualizing well log data - Herramienta para visualizar registros de pozos"
 readme = "README.md"
 requires-python = ">=3.9"
-version = "0.4.1"
+version = "0.4.2"
 dependencies = [
  "ood >=1.0.0",
  "plotly >=5.18.0",
  "colour >= 0.1.5",
  "pint >= 0.23",
+ "pandas >= 2.0.0",
  ]
 
 [project.optional-dependencies]
