--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,11 @@ find = {namespaces = false}
 
 [project]
 name = "pozo"
+license = {file = "LICENSE.txt"}
 description = "Help visualizing well log data - Herramienta para visualizar registros de pozos"
 readme = "README.md"
 requires-python = ">=3.9"
-version = "0.9.16"
+version = "0.9.17"
 dependencies = [
  "ood >=1.0.6",
  "plotly >=5.18.0",
@@ -18,6 +19,7 @@ dependencies = [
  "pint >= 0.23",
  "pandas >= 2.0.0",
  "numpy >= 1.26.0",
+ "kaleido >=0.2.1"
  ]
 
 [project.optional-dependencies]
