--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   pypi-publish:
     name: Upload release to PyPI
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment:
       name: pypi
@@ -18,7 +19,7 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: "3.9"
-    - run: python3 -m pip install --upgrade pip setuptools wheel build 
+    - run: python3 -m pip install --upgrade pip setuptools wheel build
     - run: python3 -m build
     - name: Publish package distributions to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
