Add new libraries to dev at pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,13 @@ dependencies = [
  ]
 
 [project.optional-dependencies]
-dev = ["pytest"]
+dev = [
+  "pytest",
+  "pandas >= 2.0.0",
+  "numpy >= 1.26.0",
+  "polars" >= 0.20.26,
+  "lasio"
+  ]
 
 [tool.ruff.lint]
 ignore = ["E701"]
