--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,7 +1,7 @@
 name: Ruff
-on: [push, pull_request]
+on: pull_request
 jobs:
-  ruff:
+  ruff-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
