--- a/.github/workflows/jupyter-clean.yml
+++ b/.github/workflows/jupyter-clean.yml
@@ -1,5 +1,8 @@
-- name: Ensure Clean Jupyter Notebooks
-  on:
+name: Ensure Clean Jupyter Notebooks
+on:
     pull_request:
       branches: [ "main" ]
-  uses: ResearchSoftwareActions/EnsureCleanNotebooksAction@1.1
+jobs:
+  check-jupyter:
+    steps:
+      - uses: ResearchSoftwareActions/EnsureCleanNotebooksAction@1.1
