--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,14 +2,9 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Pytest
-
-on:
-  pull_request:
-    branches: [ "main" ]
-
+on: pull_request
 permissions:
   contents: read
-
 jobs:
   test-build:
     runs-on: ubuntu-latest
