--- a/.github/workflows/jupyter-clean.yml
+++ b/.github/workflows/jupyter-clean.yml
@@ -1,3 +1,9 @@
-name: jupyter-clean
+name: jupyter-clean-wf
 on: pull_request
-uses: ResearchSoftwareActions/EnsureCleanNotebooksAction@1.1
+permissions:
+  contents: read
+jobs:
+  jupyter-clean:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: ResearchSoftwareActions/EnsureCleanNotebooksAction@1.1
