--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,15 +1,10 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Pytest
-
-on:
-  pull_request:
-    branches: [ "main" ]
-
+name: pytest-wf
+on: pull_request
 permissions:
   contents: read
-
 jobs:
   test-build:
     runs-on: ubuntu-latest
@@ -19,11 +14,11 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install dependencies
+    - name: install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest .[dev]
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
+    - name: test with pytest
       run: |
         pytest
