--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,7 +1,7 @@
-name: Ruff
+name: ruff-wf
 on: pull_request
 jobs:
-  ruff-lint:
+  ruff:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
